<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".entrypoint.Registration">

        <TextView
            android:id="@+id/txt_information"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#E7EDEE"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:padding="15dp"
            android:text="@string/personal_information"
            android:textAllCaps="true"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txt_take_photo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/txt_information"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/take_your_photo"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/img_take_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/txt_take_photo"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/photo_background_red"
            android:padding="30dp"
            android:src="@drawable/camera" />

        <LinearLayout
            android:id="@+id/layout_reg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_take_photo"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:hint="@string/full_name_same_as_nid_license"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutAdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:hint="@string/address"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:id="@+id/spinner_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/txt_spinner"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:spinnerMode="dropdown">

                </Spinner>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutNIDNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/nid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/source_sans_pro"
                        android:hint="@string/nid_number"
                        android:textSize="15sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/spinner_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/txt_spinner2"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:spinnerMode="dropdown">

                </Spinner>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutDOB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/date_of_birth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/source_sans_pro"
                        android:hint="@string/date_of_birth"
                        android:inputType="date"
                        android:textSize="15sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_car_information"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/layout_reg1"
            android:layout_marginTop="10dp"
            android:background="#E7EDEE"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:padding="15dp"
            android:text="Vehicle Information*"
            android:textAllCaps="true"
            android:textSize="13sp" />

        <LinearLayout
            android:id="@+id/layout_reg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_car_information"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutLicense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/driving_license"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:hint="@string/driving_license"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutVehicleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/vehicle_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:hint="@string/ex_toyota"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutVehicleModelNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/vehicle_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:hint="@string/vehicle_model_ex_corolla"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutVehicleColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/vehicle_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:hint="@string/vehicle_color"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/txt_car_reg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/layout_reg2"
            android:layout_marginTop="10dp"
            android:background="#E7EDEE"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:padding="15dp"
            android:text="Vehicle Registration"
            android:textAllCaps="true"
            android:textSize="13sp" />

        <LinearLayout
            android:id="@+id/spinner_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_car_reg"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/number_plate"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/source_sans_pro"
                        android:hint="@string/number_plate"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutFitness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinner_layout3">

                <EditText
                    android:id="@+id/fitness_certificate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:hint="@string/fitness_certificate"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutTaxToken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputLayoutFitness">

                <EditText
                    android:id="@+id/tax_token"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:hint="@string/tax_token"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>


        <TextView
            android:id="@+id/txt_referal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/spinner_layout3"
            android:layout_marginTop="10dp"
            android:background="#E7EDEE"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:padding="15dp"
            android:text="Referral Mobile Number"
            android:textAllCaps="true"
            android:textSize="13sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutRefrralCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_referal"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/referral_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro"
                android:hint="@string/referral_mobile_number"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/txt_TermsCondition"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/inputLayoutRefrralCode"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/source_sans_pro"
            android:padding="10dp"
            android:text="@string/by_signing_up_you_are_agree_to_terms_and_cndition"
            android:textSize="15sp" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_TermsCondition"
            android:background="#FF130B"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/agree_and_signup"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </RelativeLayout>

</ScrollView>

